--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -560,6 +560,9 @@
     <ClCompile Include="UVa\100\155.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\140.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
