--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -569,6 +569,9 @@
     <ClCompile Include="UVa\100\156.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10036.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
