--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -572,6 +572,9 @@
     <ClCompile Include="UVa\10000\10036.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10074.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
