--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -599,6 +599,9 @@
     <ClCompile Include="UVa\500\540.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10127.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
