--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -605,6 +605,9 @@
     <ClCompile Include="UVa\10100\10107.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10189.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
