--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -608,6 +608,9 @@
     <ClCompile Include="UVa\10100\10189.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10106.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -847,6 +850,9 @@
     </None>
     <None Include="UVa\400\424.py">
       <Filter>UVa\400\420</Filter>
+    </None>
+    <None Include="UVa\10100\10106.py">
+      <Filter>UVa\10100</Filter>
     </None>
   </ItemGroup>
 </Project>
