--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -611,6 +611,9 @@
     <ClCompile Include="UVa\10100\10106.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10192.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
