--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -620,6 +620,9 @@
     <ClCompile Include="UVa\10100\10190.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10115.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
