--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -629,6 +629,9 @@
     <ClCompile Include="UVa\10100\10176.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10165.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
