--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -632,6 +632,9 @@
     <ClCompile Include="UVa\10100\10165.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\109.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
