--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -635,6 +635,9 @@
     <ClCompile Include="UVa\100\109.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\128.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
