--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -638,6 +638,9 @@
     <ClCompile Include="UVa\100\128.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10102.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
