--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -686,6 +686,9 @@
     <ClCompile Include="UVa\10600\10653.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10679.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
