--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -698,6 +698,9 @@
     <ClCompile Include="UVa\10600\10633.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11057.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
