--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -701,6 +701,9 @@
     <ClCompile Include="UVa\11000\11057.cpp">
       <Filter>UVa\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11044.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
