--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -707,6 +707,9 @@
     <ClCompile Include="UVa\11000\11069.cpp">
       <Filter>UVa\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11322.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
