--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -719,6 +719,9 @@
     <ClCompile Include="UVa\11300\11340.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11349.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
