--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -725,6 +725,9 @@
     <ClCompile Include="UVa\11300\11369.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11362.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
