--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -731,6 +731,9 @@
     <ClCompile Include="UVa\11300\11343.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11309.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
