--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -734,6 +734,9 @@
     <ClCompile Include="UVa\11300\11309.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12100\12160.cpp">
+      <Filter>UVa\12100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
