--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -737,6 +737,9 @@
     <ClCompile Include="UVa\12100\12160.cpp">
       <Filter>UVa\12100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12100\12157.cpp">
+      <Filter>UVa\12100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
