--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -746,6 +746,12 @@
     <ClCompile Include="UVa\12200\12250.cpp">
       <Filter>UVa\12200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12200\12279.cpp">
+      <Filter>UVa\12200</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\12200\12243.cpp">
+      <Filter>UVa\12200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
